--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,10 +8,16 @@
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
+          <a class="nav-link {=$highlight-act}" href="./tv-load-more.html"
+            >tv-load-more</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
+          <a
+            class="nav-link {=$highlight-curr}"
+            href="./tv-infinity-scroll.html"
+            >tv-infinity-scroll</a
+          >
         </li>
       </ul>
     </nav>
